more spinning cubes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 		body {
 			margin: 0;
 		}
+
+		#info {
+			position: absolute;
+			top: 10px;
+			width: 100%;
+			text-align: center;
+			z-index: 100;
+			display: block;
+			color: white;
+		}
 	</style>
 </head>
 
 <body>
+	<div id="info">Description</div>
 	<!-- <script src="js/three.js"></script> -->
 	<script type="module" src="./js/linesThree.js">
 
@@ -23,7 +34,7 @@
 
 		// const controls = new OrbitControls();
 
-	
+
 	</script>
 	<!-- <script src="./js/testCube.js"></script> -->
 </body>
