more spinning cubes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<div id="info">Description</div>
+	<div id="info">Spincubes</div>
 	<!-- <script src="js/three.js"></script> -->
 	<script type="module" src="./js/linesThree.js">
 
