--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 <body>
 	<div id="info">Spincubes</div>
 	<!-- <script src="js/three.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"
+		integrity="sha512-yNJzAsg5JyP91u+sLHlUDULMBd3hmEiVkYeeN1cQBKaLZ7EyT6oH2u5THNIRM2Fu6VKcZJv+F/QAp1h/qzy9Ow=="
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 	<script type="module" src="./js/linesThree.js">
 
 		// Find the latest version by visiting https://cdn.skypack.dev/three.
